Fixed Z-Index Conflicts

--- a/client/src/pages/Game/Views/Solver/PointTarget/Points.module.css
+++ b/client/src/pages/Game/Views/Solver/PointTarget/Points.module.css
@@ -11,7 +11,7 @@
     background-color: black;
     border-radius: 50px;
 
-    z-index: 9999;
+    z-index: 99;
 
 }
 
